# SBY-OST-Tool

./: .gitattributes  .gitignore  CMakeLists.txt  ColorAnalyzer.qml  LICENSE  MANIFEST.in  MainContent.qml  README.md  SBY_OST_Tool.desktop  SBY_OST_Tool.spec  SBY_OST_Tool_Linux.spec  SBY_OST_Tool_Mac.spec  SBY_OST_Tool_Portable.spec  SBY_OST_Tool_Remote.spec  SBY_OST_Tool_Remote_Linux.spec  SBY_OST_Tool_Remote_Mac.spec  debug_logger.py  entitlements.plist  logs  main.py  main.qml  pyproject.toml  rename.py  requirements.txt  resources.qrc  resources_rc.py
.github/workflows/: build.yml  buildm.yml
components/: AudioExplorer.qml  FolderExplorer.qml  WheelEventInterceptor.qml
qml/: MainContent.qml  main.qml
qml/components/: AudioExplorer.qml  FolderExplorer.qml
resources/: resources.qrc  resources_rc.py
resources/SBY Soundtracks/Rascal Does Not Dream of a Dreaming Girl Original Soundtrack/: 01. Seishun Buta Yarou wa Yumemiru Shoujo no Yume wo Minai.flac  02. 'Arigatou' to 'Ganbatta ne' to 'Daisuki'.flac  03. Yume no Sugata.flac  04. Kakitai Koto.flac  05. Kinou no Kore.flac  06. Yume no Naka.flac  08. Slow Motion.flac  09. Ketsui no Hikari.flac  10. Massugu na Omoi.flac  11. Tsurai Sentaku.flac  12. Igai na Kotoba.flac  22. Mou Ichido.flac  26. Taisetsu na Namae.flac
resources/SBY Soundtracks/Rascal Does Not Dream of a Knapsack Kid Original Soundtrack/: 01. Onaji Yume.flac  03. Omamori.flac  04. Oyakusoku.flac  05. Kaede no Negai.flac  06. Kangaegoto.flac  07. Chinmoku no Ame.flac  11. Issho ni Kaeru.flac  12. Takamaru Fuan.flac  13. Iwakan.flac  14. Utagai.flac  15. Sakuta no Kesshin.flac  16. Doushitemo.flac  23. Mienai Nazo.flac  24. Nyugaku Omedetou.flac
resources/SBY Soundtracks/Rascal Does Not Dream of a Sister Venturing Out Original Soundtrack/: 03. Yarikirenai Omoi.flac  05. Odoru Kimochi.flac  06. Kaede no Onegai.flac  08. Kaede no Tame ni.flac  09. Utatane.flac  10. Nokku wa Shita.flac  11. Gohoubi-.flac  13. Ganbareru kara.flac  16. Soredemo Shinpai.flac  17. Maiagaru Sakuta.flac  20. Kaede no Yume.flac  21. Tomadoi.flac
soundtrack_tool/: __init__.py  albums.py  asset_manifest.py  audio_catalog.py  backend.py  cloudflare.py  config.py  cover_cache.py  debug_logger.py  environment.py  extractor.py  filesystem.py  metadata.py  resources.py  settings.py
soundtrack_tool/assets/SBY Soundtracks/Rascal Does Not Dream of Bunny Girl Senpai Original Soundtrack/: 01. 青春ブタ野郎.flac  02. 麻衣さん.flac  03. カップル.flac  04. 水平線.flac  05. 大事なこと.flac  06. 変態.flac  07. 江の島.flac  08. ホショウ.flac  09. 異分子.flac  10. 都市伝説.flac  11. 傷.flac  12. 助けてくれ.flac  13. 大真面目.flac  14. 薄気味悪い空間.flac  15. ひとり.flac  16. 東浜海水浴場.flac  17. バカ咲太!.flac  18. こうして、世界は桜島麻衣を取り戻した.flac  19. 朝です….flac  20. 忍者ごっこ.flac  21. 双葉.flac  22. 乙女ちっく.flac  23. 嫌悪感.flac  24. 打ち上げ花火.flac  25. 受話器の向こう.flac  26. 2回目.flac  27. ピンクのビキニ.flac  28. 乙女心.flac  29. 入れ替わった姉妹.flac  30. わだかまり.flac  31. 初恋の人.flac
soundtrack_tool/assets/SBY Soundtracks/Rascal Does Not Dream of a Dreaming Girl Original Soundtrack/: 01. Seishun Buta Yarou wa Yumemiru Shoujo no Yume wo Minai.flac  02. 'Arigatou' to 'Ganbatta ne' to 'Daisuki'.flac  03. Yume no Sugata.flac  04. Kakitai Koto.flac  05. Kinou no Kore.flac  06. Yume no Naka.flac  07. Deeto ~Yume no Sekai~.flac  08. Slow Motion.flac  09. Ketsui no Hikari.flac  10. Massugu na Omoi.flac  11. Tsurai Sentaku.flac  12. Igai na Kotoba.flac  13. Unmei wo Wakeru Jikan.flac  14. Kanashimi.flac  15. Eranda Michi.flac  16. Fuan no Kajitsu.flac  17. Baka na Koto.flac  18. Kono Yakusoku wo Mamoru Tame ni.flac  19. 'Tadaima' 'Okaerinasai'.flac  20. Ikiru Koto wo Eranda kara.flac  21. Chiisana Kanousei no Tame ni.flac  22. Mou Ichido.flac  23. Michitarita Kao.flac  24. Shizuka na Kuuki.flac  25. 'Sasuga, Azusagawa wa Buta Yarou da ne'.flac  26. Taisetsu na Namae.flac
soundtrack_tool/assets/SBY Soundtracks/Rascal Does Not Dream of a Knapsack Kid Original Soundtrack/: 01. Onaji Yume.flac  02. Daiji na Mono.flac  03. Omamori.flac  04. Oyakusoku.flac  05. Kaede no Negai.flac  06. Kangaegoto.flac  07. Chinmoku no Ame.flac  08. Saikai.flac  09. Shiawase na Jikan.flac  10. Sakuta no Shishunki Shoukougun.flac  11. Issho ni Kaeru.flac  12. Takamaru Fuan.flac  13. Iwakan.flac  14. Utagai.flac  15. Sakuta no Kesshin.flac  16. Doushitemo.flac  17. Mou Sukoshi no Shinbou.flac  18. Omamori to Yakusoku.flac  19. Mai no Yasashisa.flac  20. Anshin.flac  21. Ganbatta kara.flac  22. Kazoku.flac  23. Mienai Nazo.flac  24. Nyugaku Omedetou.flac
(+107 files in other folders)
