[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sby-ost-tool"
version = "0.1.0"
description = "Cross-platform Rascal Does Not Dream soundtrack extractor and renamer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SBY OST Tool Maintainers" }
]
dependencies = [
  "mutagen>=1.47,<2",
  "PySide6>=6.8,<7",
  "requests>=2.32,<3",
  "boto3>=1.34,<2",
]

[project.urls]
Homepage = "https://example.com/sby-ost-tool"

[tool.setuptools.package-data]
"soundtrack_tool" = [
  "assets/SBY Soundtracks/**/*",
]

[tool.setuptools.exclude-package-data]
"soundtrack_tool" = ["*.pyc", "__pycache__"]

[tool.setuptools.packages.find]
include = ["soundtrack_tool"]

[tool.black]
line-length = 99

